archive/cluster/apps/default/unifi/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  namespace: default
spec:
  ingressClassName: "nginx"
  rules:
    - host: "unifi.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: unifi
                port:
                  number: 8443
            path: /
            pathType: ImplementationSpecific
  tls:
    - secretName: "${SECRET_DOMAIN/./-}-tls"
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  clusterIP: None
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi
  namespace: default
subsets:
  - addresses:
      - ip: "${EXT_UNIFI_ADDR}"
    ports:
      - port: 8443
